2023-11-07T08:13:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6781695839 # 1321
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 185 214 / 193 222
* notice: next accum: outdated-unq outdated-all / unq all: 186 215 / 193 222
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-24] / []

2023-11-06T08:14:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6767986883 # 1318
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 184 213 / 191 220
* notice: next accum: outdated-unq outdated-all / unq all: 185 214 / 193 222
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-10-23] / [2023-11-06]

2023-11-03T08:13:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6742749519 # 1309
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 182 211 / 190 219
* notice: next accum: outdated-unq outdated-all / unq all: 184 213 / 191 220
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-10-20] / [2023-11-03]

2023-11-01T08:13:50Z: