@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-07T08:13:59Z",
+  "timestamp" : "2023-11-08T08:13:32Z",
   "count_outdated" : 215,
   "uniques_outdated" : 186,
-  "count" : 222,
-  "uniques" : 193,
+  "count" : 223,
+  "uniques" : 194,
   "clones" : [
     {
       "timestamp": "2023-10-26T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
