@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 3,
   "clones": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2023-11-06T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
