@@ -1,3 +1,12 @@
+2023-11-08T08:13:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6795457432 # 1324
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
+* notice: last 14d: unq all: 3 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 186 215 / 193 222
+* notice: next accum: outdated-unq outdated-all / unq all: 186 215 / 194 223
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-08]
+
 2023-11-07T08:13:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6781695839 # 1321
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
